# streamripper

./: .clang-format  .gitignore  CHANGES  CMakeLists.txt  INSTALL  Makefile.am  Makefile.in  README  THANKS  aclocal.m4  configure  configure.ac  fake_external_metadata.pl  fetch_external_metadata.pl  gcs_notes.txt  makedist_win.bat  parse_rules.txt  sr_config.h.cmake  streamripper.1  streamripper.1.asc  upgrade_version.pl
cmake/: FindIBERTY.cmake  FindMAD.cmake  FindOGG.cmake  FindVORBIS.cmake  SR_FindSockets.cmake
console/: cstreamripper.c  sr_cdk.h  streamripper.c
lib/: CMakeLists.txt  Makefile.am  Makefile.in  argv.c  callback.c  callback.h  cbuf2.c  cbuf2.h  cbuf3.c  cbuf3.h  charmaps.h  charset.c  charset.h  compat.h  config.h  config.h.in  confw32.h  debug.c  debug.h  errors.c  errors.h  external.c  external.h  filelib.c  filelib.h  findsep.c  findsep.h  findsep2.c  glib_iconv_test.c  http.c  http.h  iconvert.c  ictest.c  list.h  mchar.c  mchar.h  parse.c  parse.h  prefs.c  prefs.h  (+28 more)
libmad-0.15.1b/: CHANGES  CREDITS  Makefile.am  Makefile.in  README  TODO  aclocal.m4  bit.c  bit.h  configure  configure.ac  decoder.c  decoder.h  fixed.c  fixed.h  frame.c  frame.h  global.h  huffman.c  huffman.h  imdct_l_arm.S  layer12.c  layer12.h  layer3.c  layer3.h  mad.h  mad.h.sed  minimad.c  stream.c  stream.h  synth.c  synth.h  timer.c  timer.h  version.c  version.h
m4/: cf_curses.m4  sr_locale_charset.m4
testing/: sr_local.sh
tests/: CMakeLists.txt  cmock_cfg.yml  recreate_mocks.py
tests/http_test/: CMakeLists.txt  http_test.c
tests/mocks/: Mockdebug.c  Mockdebug.h  Mockmchar.c  Mockmchar.h  Mocksocklib.c  Mocksocklib.h
win32/: plugin_dll.dsp  streamripper.def  streamripper.dsw  streamripper_dll.dsp  streamripper_exe.dsp  wstreamripper_exe.dsp
win32/glib-2.16.6-1/lib/: gio-2.0.def  gio-2.0.lib  glib-2.0.def  glib-2.0.lib  gmodule-2.0.lib  gobject-2.0.def  gobject-2.0.lib  gthread-2.0.lib
win32/glib-2.16.6-1/lib/glib-2.0/include/: glibconfig.h
win32/iconv/: charset.lib  iconv.lib
win32/libmad-0.15.1b/lib/: libmad.lib
win32/libogg-1.1.3/: ogg.lib  ogg_static.lib
win32/libogg-1.1.3/ogg/: ogg.h  os_types.h
win32/libvorbis-1.1.2/: vorbis.lib  vorbis_static.lib
win32/libvorbis-1.1.2/vorbis/: codec.h  vorbisenc.h  vorbisfile.h
win32/pdcurses-3.2/: curses.h  panel.h  pdcurses.lib
win32/zlib-1.2.3/include/: zconf.h
winamp_plugin/: .cvsignore  DSP.H  SRIPPER_HOWTO.TXT  Script.aps  Script.rc  crypt.h  debug_box.c  debug_box.h  dock.c  dock.h  dsp_sripper.psc  gen.h  ioapi.c  ioapi.h  iowin32.c  iowin32.h  ipc_pe.h  makerel.cmd  options.c  options.h  plugin_dll_main.c  plugin_main.c  plugin_main.h  registry.c  registry.h  render.c  render.h  render_2.c  render_2.h  resource.h  sr163.nsi  sr163_directories.ini  sr2x.nsi  sr_winamp_vc8.sln  sr_winamp_vc8.vcproj  unzip.c  unzip.h  wa_ipc.h  wa_msgids.h  winamp.exe.manifest  (+5 more)
winamp_plugin/skins/: srskin.txt  srskin_XP.txt  srskin_winamp.txt
